more relative path updates, footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,15 +14,15 @@
             <h4>Social Links</h4>
             <ul>
                 <li><a href="https://www.facebook.com/pages/Quyen-D-Chang-DDS/718694151609466">
-                    <span class="icon"><img src="/img/footer_icon_facebook.png" alt="facebook icon"></span>Facebook</a></li>
+                    <span class="icon"><img src="img/footer_icon_facebook.png" alt="facebook icon"></span>Facebook</a></li>
                 <li><a href="https://plus.google.com/+QuyenChangFamilyDentistryRaleigh">
-                    <span class="icon"><img src="/img/footer_icon_googleplus.png" alt="google plus icon"></span>Google +</a></li>
+                    <span class="icon"><img src="img/footer_icon_googleplus.png" alt="google plus icon"></span>Google +</a></li>
                 <li><a href="https://instagram.com/quyenchangdds/">
-                    <span class="icon"><img src="/img/footer_icon_instagram.png" alt="instagram icon"></span>Instagram</a></li>
+                    <span class="icon"><img src="img/footer_icon_instagram.png" alt="instagram icon"></span>Instagram</a></li>
                 <li><a href="http://youtube.com/QuyenChangFamilyDentistryRaleigh">
-                    <span class="icon"><img src="/img/footer_icon_youtube.png" alt="youtube icon"></span>Youtube</a></li>
+                    <span class="icon"><img src="img/footer_icon_youtube.png" alt="youtube icon"></span>Youtube</a></li>
                 <li><a href="https://twitter.com/quyenchangdds">
-                    <span class="icon"><img src="/img/footer_icon_twitter.png" alt="twitter icon"></span>Twitter</a></li>
+                    <span class="icon"><img src="img/footer_icon_twitter.png" alt="twitter icon"></span>Twitter</a></li>
             </ul>
         </section>
         <section class="footer-section footer-contact-info">
