--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -51,8 +51,8 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script src="/jssrc/validator.js"></script>
-<script src="/jssrc/submit.js"></script>
+<script src="jssrc/validator.js"></script>
+<script src="jssrc/submit.js"></script>
 
 
 
