relative path issue update, see https://github.com/jekyll/jekyll/pull/1291/files

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,12 @@
 <header class="site-margin">
   <div class="header-banner">
       <figure>
-        <a href="/"><img src="img/icon_header_logo.png" alt="logo banner"></a>
+        <a href="/"><img src="{{site.baseurl}}/img/icon_header_logo.png" alt="logo banner"></a>
       </figure>
       <div class="header-action-call">
           <div>
             <a href="/contactus">
-              <span>Find Us <span class="icon icon-location"><img src="img/icon_header_location.png" alt="location icon"></span></span>
+              <span>Find Us <span class="icon icon-location"><img src="{{site.baseurl}}/img/icon_header_location.png" alt="location icon"></span></span>
             </a>
             <span class="separator">|</span>
             <span>Call us at <span class="number"><a href="tel:919-783-6551">(919) 783-6551</a></span></span>
