header/footer relative path updates

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,11 +3,11 @@
         <section class="footer-section footer-site-links">
             <h4>Site Links</h4>
             <ul>
-                <li><a href="/aboutus">About Us</a></li>
-                <li><a href="/dentalcare">Dental Care</a></li>
-                <li><a href="/patientinfo">Patient Information</a></li>
+                <li><a href="{{site.baseurl}}/aboutus">About Us</a></li>
+                <li><a href="{{site.baseurl}}/dentalcare">Dental Care</a></li>
+                <li><a href="{{site.baseurl}}/patientinfo">Patient Information</a></li>
                 <li><a href="">Blog</a></li>
-                <li><a href="/contactus">Contact Us</a></li>
+                <li><a href="{{site.baseurl}}/contactus">Contact Us</a></li>
             </ul>
         </section>
         <section class="footer-section footer-social-links">
