--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
 <header class="site-margin">
   <div class="header-banner">
       <figure>
-        <a href="/"><img src="{{site.baseurl}}/img/icon_header_logo.png" alt="logo banner"></a>
+        <a href="{{site.baseurl}}"><img src="{{site.baseurl}}/img/icon_header_logo.png" alt="logo banner"></a>
       </figure>
       <div class="header-action-call">
           <div>
-            <a href="/contactus">
+            <a href="{{site.baseurl}}/contactus">
               <span>Find Us <span class="icon icon-location"><img src="{{site.baseurl}}/img/icon_header_location.png" alt="location icon"></span></span>
             </a>
             <span class="separator">|</span>
@@ -16,29 +16,29 @@
   </div>
   <nav class="site-nav">
       <ul>
-        <li><a class={% if page.category contains "aboutus" %}"selected"{% else %}"allowhover"{% endif %} href="/aboutus">About Us</a></li>
+        <li><a class={% if page.category contains "aboutus" %}"selected"{% else %}"allowhover"{% endif %} href="{{site.baseurl}}/aboutus">About Us</a></li>
         <li>
-            <a class={% if page.category contains "dentalcare" %}"selected"{% else %}"allowhover"{% endif %} href="/dentalcare">Dental Care</a>
+            <a class={% if page.category contains "dentalcare" %}"selected"{% else %}"allowhover"{% endif %} href="{{site.baseurl}}/dentalcare">Dental Care</a>
             <div class="menu">
                 <ul>
-                    <li><a href="/dentalcare/exams/">Exams and X-Rays</a></li>
-                    <li><a href="/dentalcare/cleanings/">Cleanings</a></li>
-                    <li><a href="/dentalcare/fillings/">Fillings</a></li>
-                    <li><a href="/dentalcare/crowns/">Crowns (Caps)</a></li>
-                    <li><a href="/dentalcare/implants/">Implant Crowns</a></li>
-                    <li><a href="/dentalcare/bridges/">Bridges</a></li>
-                    <li><a href="/dentalcare/dentures/">Dentures</a></li>
-                    <li><a href="/dentalcare/rootcanals/">Root Canals</a></li>
-                    <li><a href="/dentalcare/extractions/">Extractions</a></li>
-                    <li><a href="/dentalcare/nightguards/">Nightguards</a></li>
-                    <li><a href="/dentalcare/bleaching/">Bleaching</a></li>
-                    <li><a href="/dentalcare/veneers/">Veneers</a></li>
+                    <li><a href="{{site.baseurl}}/dentalcare/exams/">Exams and X-Rays</a></li>
+                    <li><a href="{{site.baseurl}}/dentalcare/cleanings/">Cleanings</a></li>
+                    <li><a href="{{site.baseurl}}/dentalcare/fillings/">Fillings</a></li>
+                    <li><a href="{{site.baseurl}}/dentalcare/crowns/">Crowns (Caps)</a></li>
+                    <li><a href="{{site.baseurl}}/dentalcare/implants/">Implant Crowns</a></li>
+                    <li><a href="{{site.baseurl}}/dentalcare/bridges/">Bridges</a></li>
+                    <li><a href="{{site.baseurl}}/dentalcare/dentures/">Dentures</a></li>
+                    <li><a href="{{site.baseurl}}/dentalcare/rootcanals/">Root Canals</a></li>
+                    <li><a href="{{site.baseurl}}/dentalcare/extractions/">Extractions</a></li>
+                    <li><a href="{{site.baseurl}}/dentalcare/nightguards/">Nightguards</a></li>
+                    <li><a href="{{site.baseurl}}/dentalcare/bleaching/">Bleaching</a></li>
+                    <li><a href="{{site.baseurl}}/dentalcare/veneers/">Veneers</a></li>
                 </ul>
             </div>
         </li>
-        <li><a class={% if page.category contains "patientinfo" %}"selected"{% else %}"allowhover"{% endif %} href="/patientinfo">Patient Information</a></li>
+        <li><a class={% if page.category contains "patientinfo" %}"selected"{% else %}"allowhover"{% endif %} href="{{site.baseurl}}/patientinfo">Patient Information</a></li>
         <li><a class={% if page.category contains "blog" %}"selected"{% else %}"allowhover"{% endif %} href="">Blog</a></li>
-        <li><a class={% if page.category contains "contactus" %}"selected"{% else %}"allowhover"{% endif %} href="/contactus">Contact Us</a></li>
+        <li><a class={% if page.category contains "contactus" %}"selected"{% else %}"allowhover"{% endif %} href="{{site.baseurl}}/contactus">Contact Us</a></li>
       </ul>
   </nav>
 
@@ -55,7 +55,7 @@
                 <p>Thank you!</p>
                 <p>We will contact you shortly.</p>
             </div>
-            <form id="apptForm" method="POST" name="contactform" role="form" data-toggle="validator" action="/contact-form-handler.php">
+            <form id="apptForm" method="POST" name="contactform" role="form" data-toggle="validator" action="{{site.baseurl}}/contact-form-handler.php">
               <div class="form-group">
                 <label for="contact-name" class="control-label">Name:</label>
                 <input type="text" class="form-control" id="contact-name" name="name" data-error="Please fill in your name" required>
