adding favicon, and updating header.html link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-margin">
   <div class="header-banner">
       <figure>
-        <a href="{{site.baseurl}}"><img src="{{site.baseurl}}/img/icon_header_logo.png" alt="logo banner"></a>
+        <a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/img/icon_header_logo.png" alt="logo banner"></a>
       </figure>
       <div class="header-action-call">
           <div>
