adding google analytics

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,6 +53,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <script src="{{site.baseurl}}/jssrc/validator.js"></script>
 <script src="{{site.baseurl}}/jssrc/submit.js"></script>
+<script src="{{site.baseurl}}/jssrc/ga.js"></script>
 
 
 
