adding in the blog page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,7 +37,7 @@
             </div>
         </li>
         <li><a class={% if page.category contains "patientinfo" %}"selected"{% else %}"allowhover"{% endif %} href="{{site.baseurl}}/patientinfo">Patient Information</a></li>
-        <li><a class={% if page.category contains "blog" %}"selected"{% else %}"allowhover"{% endif %} href="">Blog</a></li>
+        <li><a class={% if page.category contains "blog" %}"selected"{% else %}"allowhover"{% endif %} href="{{site.baseurl}}/blog">Blog</a></li>
         <li><a class={% if page.category contains "contactus" %}"selected"{% else %}"allowhover"{% endif %} href="{{site.baseurl}}/contactus">Contact Us</a></li>
       </ul>
   </nav>
