--- a/css/styles.css
+++ b/css/styles.css
@@ -146,6 +146,7 @@ footer {
   font-size: 14px;
   color: #fff;
   line-height: 26px;
+  margin-top: 36px;
 }
 footer .footer-content {
   padding-top: 25px;
@@ -396,3 +397,21 @@ section.reasons-to-believe-banner {
   padding-bottom: 12px;
 }
 
+/* blog page */
+.blog-content .page-nav {
+  width: 230px;
+  margin-right: 12px;
+}
+.blog-content .page-nav h1 {
+  margin-top: 0px;
+  margin-bottom: 12px;
+}
+.blog-content .page-nav .post-list h2 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-left: 12px;
+  padding-top: 2px;
+}
+.blog-content .page-nav .post-list li:last-of-type {
+  padding-bottom: 0px;
+}
