--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
                 <li><a href="{{site.baseurl}}/aboutus">About Us</a></li>
                 <li><a href="{{site.baseurl}}/dentalcare">Dental Care</a></li>
                 <li><a href="{{site.baseurl}}/patientinfo">Patient Information</a></li>
-                <li><a href="">Blog</a></li>
+                <li><a href="{{site.baseurl}}/blog">Blog</a></li>
                 <li><a href="{{site.baseurl}}/contactus">Contact Us</a></li>
             </ul>
         </section>
