--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -52,7 +52,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <script src="{{site.baseurl}}/jssrc/validator.js"></script>
-<script src="{{site.baseurl}}/jssrc/submit.js"></script>
+<script src="{{site.baseurl}}/jssrc/init.js"></script>
 <script src="{{site.baseurl}}/jssrc/ga.js"></script>
 
 
