polish nav scroll

--- a/_sass/_aboutus.scss
+++ b/_sass/_aboutus.scss
@@ -2,6 +2,10 @@
 .aboutus-content .page-nav a {
   text-decoration: none;
 }
+
+.aboutus-content .page-content h1 {
+  padding-top: 8px;
+}
 .aboutus-content .drchang-profile-pic {
   float: right;
   padding: 20px;
