--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -3,17 +3,19 @@
 .blog-content .page-nav {
   width: 230px;
   margin-right: 12px;
-}
-.blog-content .page-nav h1 {
-  margin-top: 0px;
-  margin-bottom: 12px;
-}
-.blog-content .page-nav .post-list h2 {
-  margin-top: 0px;
-  margin-bottom: 0px;
-  padding-left: 12px;
-  padding-top: 2px;
-}
-.blog-content .page-nav .post-list li:last-of-type {
-  padding-bottom: 0px;
+  h1 {
+    margin-top: 0px;
+    margin-bottom: 12px;
+  }
+  .post-list {
+    h2 {
+      margin-top: 0px;
+      margin-bottom: 0px;
+      padding-left: 12px;
+      padding-top: 2px;
+    }
+    li:last-of-type {
+      padding-bottom: 0px;
+    }
+  }
 }
