--- a/_sass/_contactus.scss
+++ b/_sass/_contactus.scss
@@ -1,11 +1,16 @@
 
 /* contact us page */
-.contactus-content nav table td:first-of-type {
-  font-weight: 300;
-  color: #1e8bc3;
-  padding-right: 10px;
+.contactus-content .page-nav {
+  table td:first-of-type {
+    font-weight: 300;
+    color: #1e8bc3;
+    padding-right: 10px;
+  }
 }
-.contactus-content .contactus-map {
-  padding-top: 12px;
-  padding-bottom: 12px;
+
+.contactus-content .page-content {
+  .contactus-map {
+    padding-top: 12px;
+    padding-bottom: 12px;
+  }
 }
