--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,9 +1,9 @@
 /* header */
 header {
+  padding-top: 30px;
   font-family: roboto;
 }
 header .header-banner {
-  margin-top: 30px;
   margin-bottom: 20px;
 }
 header .header-banner figure {
