--- a/_sass/_aboutus.scss
+++ b/_sass/_aboutus.scss
@@ -5,11 +5,11 @@
 
 .aboutus-content .page-content {
   h1 {
-    padding-top: 8px;
+    padding-top: em(8);
   }
   .drchang-profile-pic {
     float: right;
-    padding: 20px;
+    padding: em(20);
     border-radius: 50%;
     -webkit-shape-outside: circle();
     shape-outside: circle();
@@ -17,7 +17,7 @@
 }
 
 .aboutus-content .page-content .team {
-  height: 450px;
+  height: em(450);
   .teammate {
       width: 33%;
       float: left;
@@ -26,20 +26,20 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
-        border-radius: 150px;
-        -webkit-border-radius: 150px;
-        -moz-border-radius: 150px;
-        box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-        -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-        -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-        padding-top: 0px;
+        border-radius: em(150);
+        -webkit-border-radius: em(150);
+        -moz-border-radius: em(150);
+        box-shadow: 0 0 em(8) rgba(0, 0, 0, .8);
+        -webkit-box-shadow: 0 0 em(8) rgba(0, 0, 0, .8);
+        -moz-box-shadow: 0 0 em(8) rgba(0, 0, 0, .8);
+        padding-top: em(0);
       }
       .name {
-        color: #EB5A2F;
-        margin-bottom: 4px;
+        color: $darkorange;
+        margin-bottom: em(4);
       }
       .job {
-        margin-top: 0px;
+        margin-top: em(0);
       }
       .bio {
         width: 80%;
