--- a/_sass/_contactus.scss
+++ b/_sass/_contactus.scss
@@ -3,14 +3,13 @@
 .contactus-content .page-nav {
   table td:first-of-type {
     font-weight: 300;
-    color: #1e8bc3;
-    padding-right: 10px;
+    color: $blue;
+    padding-right: em(10);
   }
 }
 
 .contactus-content .page-content {
   .contactus-map {
-    padding-top: 12px;
-    padding-bottom: 12px;
+    padding: em(12) 0;
   }
 }
