--- a/_sass/_dentalcare.scss
+++ b/_sass/_dentalcare.scss
@@ -1,7 +1,7 @@
 /* dental care page */
 .dentalcare-content .page-nav {
   li a {
-    color: #323234;
+    color: $black;
     &.selected {
       font-weight: 400;
     }
@@ -9,12 +9,12 @@
 }
 
 .dentalcare-content .page-content {
-  min-height: 575px;
+  min-height: em(575);
   .dentalcare-links {
-      margin-bottom: 32px;
+      margin-bottom: em(32);
       ul {
           width: 32%;
-          padding-left: 0px;
+          padding-left: em(0);
           display: inline-block;
           font-weight: normal;
           li {
