--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,7 @@
 ---
 
 @import
+    "colors",
     "base",
     "header",
     "footer",
@@ -14,4 +15,3 @@
     "patientinfo",
     "blog",
     "contactus";
-
