--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,10 +13,11 @@
 
     <div class="sidebar">
       <ul>
-        <li><a href="{{site.baseurl}}/aboutus">About Us</a></li>
+        <li><a href="{{site.baseurl}}/">Home</a></li>
+        <!-- <li><a href="{{site.baseurl}}/aboutus">About Us</a></li>
         <li><a href="{{site.baseurl}}/dentalcare">Dental Care</a>
         <li><a href="{{site.baseurl}}/patientinfo">Patient Information</a></li>
-        <li><a href="{{site.baseurl}}/blog">Blog</a></li>
+        <li><a href="{{site.baseurl}}/blog">Blog</a></li> -->
         <li><a href="{{site.baseurl}}/contactus">Contact Us</a></li>
       </ul>
     </div>
