--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -55,3 +55,14 @@ footer .footer-contact-info {
 footer .footer-map {
   float: right;
 }
+
+
+// -------------------------------------------------------------------------
+// --- mq footer css
+// -------------------------------------------------------------------------
+
+@media only screen and (max-width:$mqMaxMobile) {
+  footer {
+    display: none;
+  }
+}
