--- a/_sass/_contactus.scss
+++ b/_sass/_contactus.scss
@@ -13,3 +13,32 @@
     padding: em(12) 0;
   }
 }
+
+
+// -------------------------------------------------------------------------
+// --- mq contactus css
+// -------------------------------------------------------------------------
+
+@media only screen and (max-width:$mqMaxMobile) {
+  .contactus-content .page-nav {
+    float: center;
+    margin: 0 auto;
+    padding-top: em(20);
+    width: 65%;
+    section p {
+      margin-bottom: em(20);
+    }
+    h1 {
+      overflow: hidden;
+      white-space: nowrap;
+    }
+    table {
+      tr:first-child > td {
+        padding-bottom: em(10);
+      }
+    }
+  }
+  .contactus-content .page-content {
+    display: none;
+  }
+}
