--- a/_sass/_contactus.scss
+++ b/_sass/_contactus.scss
@@ -21,7 +21,7 @@
 
 @media only screen and (max-width:$mqMaxMobile) {
   .contactus-content .page-nav {
-    float: center;
+    float: none;
     margin: 0 auto;
     padding-top: em(20);
     width: 65%;
