add email into contact info table

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,20 +27,7 @@
         </section>
         <section class="footer-section footer-contact-info">
             <h4>Get in touch with us</h4>
-            <table>
-                <tr>
-                    <td>Phone:</td>
-                    <td><a href="tel:919-783-6551">(919) 783-6551</a></td>
-                </tr>
-                <tr>
-                    <td>Location:</td>
-                    <td>3388 Six Forks Road</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>Raleigh, NC 27609</td>
-                </tr>
-            </table>
+            {% include contactinfo.html %}
             <button class="schedule-btn" name="schedule-btn-footer">Schedule an Appointment</button>
         </section>
         <section class="footer-map">
