about us - mobile updates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <input type="checkbox" id="sidebartoggler" name="" value="">
     <label for="sidebartoggler" class="toggle">☰</label>
 
-    <div class="main-window">
+    <div class="main-window{% if page.category %} main-{{ page.category }}{% endif %}">
       {% include header.html variable-param=page.category %}
       {{ content }}
       {% include footer.html %}
@@ -14,8 +14,8 @@
     <div class="sidebar">
       <ul>
         <li><a href="{{site.baseurl}}/">Home</a></li>
-        <!-- <li><a href="{{site.baseurl}}/aboutus">About Us</a></li>
-        <li><a href="{{site.baseurl}}/dentalcare">Dental Care</a>
+        <li><a href="{{site.baseurl}}/aboutus">About Us</a></li>
+        <!-- <li><a href="{{site.baseurl}}/dentalcare">Dental Care</a>
         <li><a href="{{site.baseurl}}/patientinfo">Patient Information</a></li>
         <li><a href="{{site.baseurl}}/blog">Blog</a></li> -->
         <li><a href="{{site.baseurl}}/contactus">Contact Us</a></li>
