--- a/_includes/contactinfo.html
+++ b/_includes/contactinfo.html
@@ -3,7 +3,7 @@
         <td>Phone:</td>
         <td><a href="tel:919-783-6551">(919) 783-6551</a></td>
     </tr>
-    <tr>
+    <tr class="email">
         <td>Email:</td>
         <td><a href="mailto:{{site.email}}">{{site.email}}</a></td>
     </tr>
