--- a/_sass/_contactus.scss
+++ b/_sass/_contactus.scss
@@ -1,10 +1,18 @@
 
 /* contact us page */
 .contactus-content .page-nav {
-  table td:first-of-type {
-    font-weight: 300;
-    color: $blue;
-    padding-right: em(10);
+  table {
+    td:first-of-type {
+      font-weight: 300;
+      color: $blue;
+      padding-right: em(10);
+    }
+    tr.email > td {
+      padding: em(8) 0;
+    }
+  }
+  section p {
+    padding-bottom: em(24);
   }
 }
 
@@ -25,17 +33,9 @@
     margin: 0 auto;
     padding-top: em(20);
     width: 65%;
-    section p {
-      margin-bottom: em(20);
-    }
     h1 {
       overflow: hidden;
       white-space: nowrap;
-    }
-    table {
-      tr:first-child > td {
-        padding-bottom: em(10);
-      }
     }
   }
   .contactus-content .page-content {
